Внедрил styled-components

--- a/src/components/Categories/cat.module.css
+++ b/src/components/Categories/cat.module.css
@@ -1,4 +1,4 @@
-.secondMain {
+/* .secondMain {
     height: 80px;
     display: flex;
     justify-content: space-between;
@@ -6,7 +6,7 @@
     padding: 5px 150px;
     background-color: #0e2e56d3;
     transition: 0.250ms;
-}
+} */
 
 .list {
     list-style: none;
